# my-iptv

./: .env.example  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh  test_app.py  verify_project.sh
app/: main.py
app/api/: __init__.py  channels.py  epg.py  favorites.py  play.py
app/core/: config.py  logging.py
app/models/: __init__.py  channel.py  epg.py  favorite.py
app/parsers/: __init__.py  epg_parser.py  m3u8_parser.py
app/services/: __init__.py  channel_service.py  epg_service.py  favorite_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
data/: example_channels.m3u8
